<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SanpedroAmielExam1">

    <TextView
        android:id="@+id/textview"
        style="@style/texts"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:fontFamily="serif-monospace"
        android:text="@string/product_details"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646"
        tools:background="@drawable/bg1" />

    <TextView
        android:id="@+id/textView"
        style="@style/texts"
        android:layout_width="281dp"
        android:layout_height="79dp"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="51dp"
        android:fontFamily="serif-monospace"
        android:text="@string/shipping_and_returns"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic"
        tools:background="@drawable/bg1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="68dp"
        android:layout_marginStart="51dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:text="back" />

    <Button
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="51dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/qwe"
        tools:ignore="MissingConstraints"
        tools:text="next" />

    <ImageView
        android:id="@+id/pic"
        style="@style/pic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/qwe"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoes"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/qwe"
        style="@style/qwe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="304dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="78dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textview"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pic"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="Balenciaga Triple S Trainers" />

    <TextView
        android:id="@+id/textView3"
        style="@style/texts"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="51dp"
        android:background="@drawable/bg1"
        android:fontFamily="serif-monospace"
        android:text="@string/sizes"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>ConstraintLayout>